--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "antd": "^5.28.0",
     "apexcharts": "^3.35.2",
     "apexcharts-clevision": "^3.28.5",
-    "axios": "^1.1.3",
+    "axios": "^1.13.2",
     "axios-mock-adapter": "^1.20.0",
     "bootstrap": "^5.2.2",
     "bs-stepper": "1.7.0",
@@ -80,6 +80,7 @@
     "react-shepherd": "^4.1.0",
     "react-slidedown": "^2.4.7",
     "react-sortablejs": "6.0.0",
+    "react-toastify": "^11.0.5",
     "reactstrap": "^9.1.5",
     "recharts": "^2.1.9",
     "redux": "^4.2.0",
@@ -162,9 +163,3 @@
     "not op_mini all"
   ]
 }
-
-
-
-
-
-
